# chemistry

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
docker/: base.Dockerfile  quantum-chemistry.Dockerfile  quantum-ml.Dockerfile
examples/: 01_basic_molecular_calculations.py  02_machine_learning_workflow.py  03_active_space_selection.py
shared/schemas/: __init__.py  calculation_schemas.py
tests/: __init__.py
tests/unit/: test_chemistry.py  test_converters.py  test_molecule.py
